2025-11-10_dhl_docker_kubernetes/2025-11-10_docker-kubernetes-dhl/kubernetes/counter/backend_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  revisionHistoryLimit: 0
  replicas: 4
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: main
          image: ttl.sh/dhl/backend
          ports:
            - containerPort: 8000
          startupProbe:
            httpGet:
              path: /readyz
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 1
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /livez
              port: 8000
            failureThreshold: 2
          resources:
            requests:
              cpu: 50m
              memory: 20Mi
            limits:
              cpu: 100m
              memory: 40Mi
