2025-11-10_dhl_docker_kubernetes/2025-11-10_docker-kubernetes-dhl/kubernetes/counter/frontend_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  revisionHistoryLimit: 0
  replicas: 4
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: main
          image: ttl.sh/dhl/frontend
          ports:
            - containerPort: 8000
          startupProbe:
            httpGet:
              path: /api/livez
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 1
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /api/livez
              port: 3000
            failureThreshold: 2
          resources:
            requests:
              cpu: 20m
              memory: 20Mi
            limits:
              cpu: 40m
              memory: 40Mi
