2025-11-10_dhl_docker_kubernetes/2025-11-10_docker-kubernetes-dhl/kubernetes/counter/redis_statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  serviceName: redis
  volumeClaimTemplates:
    - metadata:
        name: redis
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      volumes:
        - name: redis
          persistentVolumeClaim:
            claimName: redis
      containers:
        - name: main
          image: redis:8
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis
              mountPath: /data
          resources:
            requests:
              cpu: 50m
              memory: 20Mi
            limits:
              cpu: 100m
              memory: 40Mi
