2025-11-10_dhl_docker_kubernetes/2025-11-10_docker-kubernetes-dhl/kubernetes/counter/frontend_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - counter.lab0.sikademo.com
      secretName: frontend-tls
  rules:
    - host: counter.lab0.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
